<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"

    android:orientation="vertical"
    android:background="@drawable/fp2"
    tools:context=".register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="50dp"
        android:text="@string/verse"
        android:textColor="#000000"
        android:textSize="30sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src = "@drawable/dianhua"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_phone"
            android:singleLine="true"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src = "@drawable/yanzehngma"/>

        <EditText
            android:id="@+id/et_verification"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_verification"
            android:singleLine="true"
            />
        <TextView
            android:id="@+id/tv_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_verification"
            android:textSize="15sp"
            android:clickable="true"
            android:layout_marginLeft="10dp"
            android:textColor="#2196F3"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_find_password"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_find_password"/>

</LinearLayout>