<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/register5"
    tools:context=".register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="70dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:src = "@drawable/rentou2"/>

        <EditText
            android:id="@+id/et_username2"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_username"
            android:singleLine="true"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src = "@drawable/dianhua"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_phone"
            android:singleLine="true"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">
    <ImageView
    android:layout_width="30dp"
    android:layout_height="40dp"
    android:src = "@drawable/yaoshi"/>

    <EditText
    android:id="@+id/et_repassword"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:hint="@string/et_password"
    android:singleLine="true"
    />

</LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src = "@drawable/yaoshi"/>

        <EditText
            android:id="@+id/et_repassword2"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_password2"
            android:singleLine="true"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src = "@drawable/xueyuan"/>

<!--        <TextView-->
            android:id="@+id/tv_xueyuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_xueyuan"
            android:textSize="20sp"
            android:textColor="#65000000"/>

        <Spinner
            android:id= "@+id/sp_xueyuan"
            android:entries="@array/xueyuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="45dp"
            ></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src = "@drawable/yanzehngma"/>

        <EditText
            android:id="@+id/et_verification"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_verification"
            android:singleLine="true"
            />
        <TextView
            android:id="@+id/tv_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_verification"
            android:textSize="15sp"
            android:clickable="true"
            android:layout_marginLeft="10dp"
            android:textColor="#2196F3"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_register"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_register"/>

</LinearLayout>